--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body class="bg-green-200 ">
     <header class="headd" align="center">
 
-        <nav class="nav-bar gap-3 bg-black  text-green-200 p-5 flex justify-center flex-wrap">
-            <ul class="inline-flex space-x-4 gap-3 ">
-              <li class="space-x- inline-flex alig gap-1  ">
+        <nav class="nav-bar gap-3 bg-black  text-green-200 p-5 flex justify-center ">
+            <ul class="inline-flex flex-col md:flex-row space-x-4 gap-3 ">
+              <li class="justify-center inline-flex  self-center gap-1  ">
                 <i class="fa-solid fa-location-dot"></i> Patna,Bihar
               </li>
               <li class=" gap-1 ">
@@ -74,7 +74,7 @@
 
     </section >
       <br>
-      <section class="typing text-3xl font-bold">
+      <section class="typing text-xl md:text-3xl font-bold">
       <h1 class="text">[" Hi, I'm Mayank Pratap Singh ",</h1> <br>
       <h1 class="text1">" I'm a Web Developer "]</h1>
 
